more consistent colors and logo fix

--- a/public/index.html
+++ b/public/index.html
@@ -83,24 +83,24 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <div class="flex flex-col h-screen w-screen">
-    <header class="bg-indigo-600 text-white flex justify-between dark:bg-indigo-900">
+    <header class="bg-oso-purple-600 text-white flex justify-between dark:bg-oso-purple-900">
       <div class="px-4 py-2">
         <h1 class="text-2xl font-bold">
           <a id="logo-link" href="/">
-            <img src="https://www.osohq.com/docs/logo-bear-white.png" class="inline h-[1em] mr-1"> A Tour of Polar
+            <img src="https://meanitsoftware.s3.us-east-1.amazonaws.com/Oso+Logo+-+White.svg" class="inline h-[1em] mr-1"> A Tour of Polar
           </a>
         </h1>
       </div>
       <div class="flex items-center gap-3">
-        <a href="https://www.osohq.com/meet-oso" target="_blank" class="bg-indigo-600 font-bold hover:bg-indigo-500 text-white px-4 py-2 rounded-md dark:bg-indigo-800 dark:hover:bg-indigo-700">
+        <a href="https://www.osohq.com/meet-oso" target="_blank" class="bg-oso-purple-600 font-bold hover:bg-oso-purple-500 text-white px-4 py-2 rounded-md dark:bg-oso-purple-800 dark:hover:bg-oso-purple-700">
           <svg stroke="currentColor" class="inline mr-1" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"></path></svg>
           Meet an Eng
         </a>
-        <a href="https://cloud.osohq.com" target="_blank" class="bg-amber-300 font-bold hover:bg-amber-200 text-black px-4 py-2 rounded-md">
+        <a href="https://cloud.osohq.com" target="_blank" class="bg-oso-yellow-300 font-bold hover:bg-oso-yellow-200 text-oso-black px-4 py-2 rounded-md">
           <svg class="inline mr-1" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 20 20" aria-hidden="true" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z" clip-rule="evenodd"></path></svg>
           Try Oso
         </a>
-        <button onclick="toggleDarkMode()" class="p-2 rounded-lg hover:bg-indigo-700 dark:bg-indigo-800">
+        <button onclick="toggleDarkMode()" class="p-2 rounded-lg hover:bg-oso-purple-700 dark:bg-oso-purple-800">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z" />
           </svg>
@@ -115,9 +115,9 @@
         <div id="pageContent" class="flex-grow dark:text-gray-300"></div>
         <div class="w-full flex flex-col gap-2">
           <div class="flex gap-4 items-center">
-            <button id="prevButton" onclick="previousPage()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-gray-400 dark:bg-indigo-800 dark:hover:bg-indigo-700">&lt;</button>
+            <button id="prevButton" onclick="previousPage()" class="bg-oso-purple-600 hover:bg-oso-purple-500 text-white px-4 py-2 rounded-md disabled:bg-gray-400 dark:bg-oso-purple-800 dark:hover:bg-oso-purple-700">&lt;</button>
             <span class="text-gray-600 dark:text-gray-400" id="curPage"></span>
-            <button id="nextButton" onclick="nextPage()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-gray-400 dark:bg-indigo-800 dark:hover:bg-indigo-700">&gt;</button>
+            <button id="nextButton" onclick="nextPage()" class="bg-oso-purple-600 hover:bg-oso-purple-500 text-white px-4 py-2 rounded-md disabled:bg-gray-400 dark:bg-oso-purple-800 dark:hover:bg-oso-purple-700">&gt;</button>
           </div>
           <div class="text-gray-600 text-sm font-bold dark:text-gray-400" id="chapterTitle"></div>
         </div>
@@ -134,7 +134,7 @@
               <!-- <input id="factInput" type="text" class="flex-grow border border-gray-300 rounded px-2 py-1 dark:bg-gray-700 dark:border-gray-600 dark:text-white" placeholder="Enter fact"> -->
               <select id="factTypeSelect" class="h-8 self-start border border-gray-300 rounded px-2 py-1 bg-white dark:bg-gray-700 dark:border-gray-600 dark:text-white" placeholder="Fact Type"></select>
               <div class="flex flex-col gap-2" id="factArgs"></div>
-              <button onclick="addFact()" class="h-8 self-start bg-indigo-600 text-white px-2 py-1 rounded hover:bg-indigo-500 dark:bg-indigo-800 dark:hover:bg-indigo-700">Add</button>
+              <button onclick="addFact()" class="h-8 self-start bg-oso-purple-600 text-white px-2 py-1 rounded hover:bg-oso-purple-500 dark:bg-oso-purple-800 dark:hover:bg-oso-purple-700">Add</button>
             </div>
             <div id="factList" class="mt-4 flex flex-col gap-2 px-2"></div>
           </div>
@@ -147,7 +147,7 @@
               type="text"
               value='User:alice "read" Organization:acme'
               class="border flex-grow border-gray-300 rounded-md px-3 py-2 dark:bg-gray-700 dark:border-gray-600 dark:text-white font-mono" placeholder="User:alice read Organization:acme">
-            <button id="runButton" onclick="runCode()" class="bg-indigo-600 hover:bg-indigo-500 text-white px-4 py-2 rounded-md disabled:bg-slate-500 dark:bg-indigo-800 dark:hover:bg-indigo-700">
+            <button id="runButton" onclick="runCode()" class="bg-oso-purple-600 hover:bg-oso-purple-500 text-white px-4 py-2 rounded-md disabled:bg-slate-500 dark:bg-oso-purple-800 dark:hover:bg-oso-purple-700">
               Authorize
             </button>
           </div>
@@ -409,7 +409,7 @@ async function runCode() {
   let success = null;
   let error = null;
   try {
-    results.innerHTML = '<div class="animate-spin h-5 w-5 border-2 border-indigo-600 border-t-transparent rounded-full mx-auto"></div>';
+    results.innerHTML = '<div class="animate-spin h-5 w-5 border-2 border-oso-purple-600 border-t-transparent rounded-full mx-auto"></div>';
 
     const response = await fetch(`${__BASE_PATH__}/api/exec`, {
       method: 'POST',
