clean up some more comments

--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
 
   <div id="imageModal" class="fixed inset-0 z-10 w-screen overflow-y-auto hidden bg-gray-300 dark:bg-gray-700 bg-opacity-40 dark:bg-opacity-40">
     <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0" onclick="if(event.target === this) closeImageModal()">
-      <div class="relative transform overflow-hidden rounded-lg bg-white px-4 pb-4 pt-5 text-left shadow-xl transition-all sm:my-8 sm:p-6">
+      <div class="relative transform overflow-hidden rounded-lg bg-white dark:bg-gray-400 px-4 pb-4 pt-5 text-left shadow-xl transition-all sm:my-8 sm:p-6">
         <div class="absolute top-4 right-4">
           <button onclick="closeImageModal()" class="text-gray-500 hover:text-gray-800 transition duration-150 ease-in-out">
             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
