--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,16 @@
       padding: 2px;
       cursor: col-resize;
     }
+
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+      40% {transform: translateY(-10px);}
+      60% {transform: translateY(-5px);}
+    }
+
+    .bounce {
+      animation: bounce 1s ease infinite;
+    }
   </style>
 </head>
 
@@ -150,8 +160,8 @@
               Authorize
             </button>
           </div>
-          <pre id="results" class="p-4 h-[calc(100%-66px)] overflow-y-auto relative dark:text-gray-300 mr-[1px]">
-            <img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6793da36f7a5080d73228681_File%20Sharing%20Bear.png" class="absolute bottom-0 h-48 left-1/2 -translate-x-1/2">
+          <pre id="results" class="p-4 h-[calc(100%-66px)] overflow-y-auto relative text-gray-700 dark:text-gray-300 mr-[1px]">
+            <div class="absolute bottom-0 h-48 left-1/2 -translate-x-1/2 text-center"><div>Try clicking "Authorize" to run the check!</div><img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6793da36f7a5080d73228681_File%20Sharing%20Bear.png" class="h-48 inline"></div>
           </pre>
         </div>
       </div>
@@ -323,6 +333,16 @@ function updatePage(pushState) {
   }
   cm.focus();
 
+  setTimeout(() => {
+    if (document.querySelector('#moreContentOpen')) {
+      document.querySelector('#moreContentOpen').addEventListener('click', function() {
+        track('READ_MORE');
+        document.querySelector('#moreContent').classList.remove('hidden');
+        document.querySelector('#moreContentOpen').classList.add('hidden');
+      });
+    }
+  }, 0);
+
   getFactTypes();
 }
 
@@ -377,6 +397,16 @@ async function getFactTypes() {
     factSelect.appendChild(option);
   }
 }
+
+setTimeout(() => {
+  if (document.querySelector('#moreContentOpen')) {
+    document.querySelector('#moreContentOpen').addEventListener('click', function() {
+      track('READ_MORE');
+      document.querySelector('#moreContent').classList.remove('hidden');
+      document.querySelector('#moreContentOpen').classList.add('hidden');
+    });
+  }
+}, 0);
 
 const factSelect = document.getElementById('factTypeSelect');
 factSelect.addEventListener('change', function onSelectFactType() {
@@ -526,6 +556,19 @@ if (localStorage.getItem('darkMode') === 'true' ||
 } else {
   document.documentElement.classList.remove('dark');
   cm.setOption('theme', 'default');
+}
+
+// Check if the user has seen the runButton bounce animation before
+if (!localStorage.getItem('seenRunButtonBounce')) {
+  document.addEventListener('DOMContentLoaded', () => {
+    const runButton = document.getElementById('runButton');
+    runButton.classList.add('bounce');
+
+    // Remove the bounce after 5 seconds
+    setTimeout(() => {
+      runButton.classList.remove('bounce');
+    }, 10000);
+  });
 }
 
 window.addEventListener('popstate', () => {
@@ -683,6 +726,16 @@ document.getElementById('authorizeQuery').addEventListener('keypress', (e) => {
 });
 
 function track(type, data = {}) {
+  if (document.getElementById('runButton').classList.contains('bounce')) {
+    document.getElementById('runButton').classList.remove('bounce');
+  }
+  // Skip tracking if running on localhost
+  if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+    return;
+  }
+  // Don't show bounce animation anymore
+  localStorage.setItem('seenRunButtonBounce', 'true');
+
   const sessionId = sessionStorage.getItem('sessionId') ||
     Math.random().toString(36).slice(2) + Date.now().toString(36);
   sessionStorage.setItem('sessionId', sessionId);
