--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
             </button>
           </div>
           <pre id="results" class="p-4 h-[calc(100%-66px)] overflow-y-auto relative text-gray-700 dark:text-gray-300 mr-[1px]">
-            <div class="absolute bottom-0 h-48 left-1/2 -translate-x-1/2 text-center"><div>Try clicking "Authorize" to run the check!</div><img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6793da36f7a5080d73228681_File%20Sharing%20Bear.png" class="h-48 inline"></div>
+            <div class="absolute bottom-0 h-48 left-1/2 -translate-x-1/2 text-center"><div>Try clicking "Authorize" to run the authorization query!</div><img src="https://cdn.prod.website-files.com/5f1483105c9a72fd0a3b662a/6793da36f7a5080d73228681_File%20Sharing%20Bear.png" class="h-48 inline"></div>
           </pre>
         </div>
       </div>
